added removing/adding books

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,1 +1,7 @@
-.app {}
+.app {
+  background-color: var(--color-bg);
+  margin: 20px auto;
+  width: 90%;
+  min-width: 700px;
+  color: var(--color-color);
+}
