--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -5,3 +5,14 @@
 html, body {
   font-size: 32px;
 }
+
+body {
+  background-color: var(--color-bg-3);
+}
+
+ul, li {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  outline: none;
+}
